[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/scripts/world.gd" type="Script" id=1]
[ext_resource path="res://scenes/asteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/sky/sky.png" type="Texture" id=3]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Interface.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 4.44348, 2.69514, 0, 0, 0, 0, 604.365, 5.70983, 0, 0, 0, 0, 599.843, 1026.18, 0, 0, 0, 0, 7.45813, 1024.67, 0, 0, 0, 0, 4.44348, 2.69514 )
}

[node name="world" type="Node"]
script = ExtResource( 1 )
Asteroid = ExtResource( 2 )

[node name="backGround" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 1024.0
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.539386, 0.589751 )

[node name="AsteroidTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 299.961, 479.334 )

[node name="PathAsteroid" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="AsteroidPosition" type="PathFollow2D" parent="PathAsteroid"]
position = Vector2( 4.44348, 2.69514 )
rotation = 0.00502516

[node name="Interface" parent="." instance=ExtResource( 5 )]

[connection signal="collide" from="Player" to="." method="game_over"]
[connection signal="timeout" from="AsteroidTimer" to="." method="_on_AsteroidTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]
[connection signal="initGame" from="Interface" to="." method="newGame"]
